--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,19 +1,26 @@
 <section class="contact" id="block5">
   <h2 class="visually-hidden">office</h2>
 
-  <div class="contacts container contacts-top">
-    <!-- первая карточка -->
+  <!-- первая карточка -->
+  <ul>
+    <div class="contacts container contacts-top">
+      <div class="contacts__section">
+        <div class="contacts__section-top">
+          <p class="contacts__category">CAFE</p>
+          <p class="contacts__categorycity">Chicago</p>
+          <p class="contacts__describe">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+        </div>
+        <ul class="contacts__list-schedule">
+          <li class="contacts__timeday">
+            Monday - Friday
+            <p class="contacts__time-weekend">06:00 AM - 10:00 PM</p>
+          </li>
+          <li class="contacts__timeday">
+            Saturday - Sunday
+            <p class="contacts__time">08:00 AM - 16:00 PM</p>
+          </li>
+        </ul>
 
-    <div class="contacts__section">
-      <p class="contacts__category">CAFE</p>
-      <p class="contacts__categorycity">Chicago</p>
-      <p class="contacts__describe">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-      <p class="contacts__timeday">Monday - Friday</p>
-      <p class="contacts__time-weekend">06:00 AM - 10:00 PM</p>
-      <p class="contacts__timeday">Saturday - Sunday</p>
-      <p class="contacts__time">08:00 AM - 16:00 PM</p>
-
-      <address>
         <ul class="contacts__list">
           <li class="contacts__item link">
             <a href="tel:+610383766284" class="contacts__tel link">+61(0) 383 766 284</a>
@@ -22,21 +29,27 @@
             <a href="mailto:noreply@envato.com" class="contacts__mail link">noreply@envato.com</a>
           </li>
         </ul>
-      </address>
-    </div>
+      </div>
 
-    <!-- вторая карточка -->
+      <!-- вторая карточка -->
 
-    <div class="contacts__section">
-      <p class="contacts__category category-green">FOODTRUCK</p>
-      <p class="contacts__categorycity">Los Angeles</p>
-      <p class="contacts__describe">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-      <p class="contacts__timeday">Monday - Friday</p>
-      <p class="contacts__time-weekend">06:00 AM - 10:00 PM</p>
-      <p class="contacts__timeday">Saturday - Sunday</p>
-      <p class="contacts__time">08:00 AM - 16:00 PM</p>
+      <div class="contacts__section">
+        <div class="contacts__section">
+          <p class="contacts__category category-green">FOODTRUCK</p>
+          <p class="contacts__categorycity">Los Angeles</p>
+          <p class="contacts__describe">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+        </div>
+        <ul>
+          <li class="contacts__timeday">
+            Monday - Friday
+            <p class="contacts__time-weekend">06:00 AM - 10:00 PM</p>
+          </li>
+          <li class="contacts__timeday">
+            Saturday - Sunday
+            <p class="contacts__time">08:00 AM - 16:00 PM</p>
+          </li>
+        </ul>
 
-      <address>
         <ul class="contacts__list">
           <li class="contacts__item link">
             <a href="tel:+610383766284" class="contacts__tel link">+61(0) 383 766 284</a>
@@ -45,21 +58,27 @@
             <a href="mailto:noreply@envato.com" class="contacts__mail link">noreply@envato.com</a>
           </li>
         </ul>
-      </address>
-    </div>
+      </div>
 
-    <!-- третья карточка -->
+      <!-- третья карточка -->
 
-    <div class="contacts__section">
-      <p class="contacts__category">CAFE</p>
-      <p class="contacts__categorycity">New York</p>
-      <p class="contacts__describe">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-      <p class="contacts__timeday">Monday - Friday</p>
-      <p class="contacts__time-weekend">06:00 AM - 10:00 PM</p>
-      <p class="contacts__timeday">Saturday - Sunday</p>
-      <p class="contacts__time">08:00 AM - 16:00 PM</p>
+      <div class="contacts__section">
+        <div class="contacts__section">
+          <p class="contacts__category">CAFE</p>
+          <p class="contacts__categorycity">New York</p>
+          <p class="contacts__describe">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+        </div>
+        <ul>
+          <li class="contacts__timeday">
+            Monday - Friday
+            <p class="contacts__time-weekend">06:00 AM - 10:00 PM</p>
+          </li>
+          <li class="contacts__timeday">
+            Saturday - Sunday
+            <p class="contacts__time">08:00 AM - 16:00 PM</p>
+          </li>
+        </ul>
 
-      <address>
         <ul class="contacts__list">
           <li class="contacts__item link">
             <a href="tel:+610383766284" class="contacts__tel link">+61(0) 383 766 284</a>
@@ -68,29 +87,27 @@
             <a href="mailto:noreply@envato.com" class="contacts__mail link">noreply@envato.com</a>
           </li>
         </ul>
-      </address>
+      </div>
     </div>
-  </div>
+  </ul>
 
-  <div class="collaboration contacts-bottom">
-    <ul class="collaboration__list">
-      <li class="collaboration__item">
-        <button type="button" class="collaboration__btn">
-          Our Locations
-          <svg class="collaboration__svg">
-            <use href="./images/symbol-defs.svg#icon-vector-white"></use>
-          </svg>
-        </button>
-      </li>
+  <ul class="collaboration__list">
+    <li class="collaboration__item">
+      <button type="button" class="collaboration__btn">
+        Our Locations
+        <svg class="collaboration__svg">
+          <use href="./images/symbol-defs.svg#icon-vector-white"></use>
+        </svg>
+      </button>
+    </li>
 
-      <li class="collaboration__item">
-        <button type="button" class="collaboration__btntwo">
-          Franchise
-          <svg class="collaboration__svg-red">
-            <use href="./images/symbol-defs.svg#icon-vector-red"></use>
-          </svg>
-        </button>
-      </li>
-    </ul>
-  </div>
+    <li class="collaboration__item">
+      <button type="button" class="collaboration__btntwo">
+        Franchise
+        <svg class="collaboration__svg-red">
+          <use href="./images/symbol-defs.svg#icon-vector-red"></use>
+        </svg>
+      </button>
+    </li>
+  </ul>
 </section>
