--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -3,13 +3,16 @@
     background: linear-gradient(180deg, #ffffff 6%, #fff5f6 0, #ffffff 0, #fff5f6 0%);
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 113px;
 
     @media screen and (min-width: 768px) {
       background: linear-gradient(180deg, #ffffff 11%, #fff5f6, #ffffff, #fff5f6 0%);
+      padding-bottom: 165px;
     }
   }
   @media screen and (min-width: 1280px) {
     background: linear-gradient(180deg, #ffffff 13%, #fff5f6, #ffffff, #fff5f6 0%);
+    padding-bottom: 165px;
   }
 }
 
@@ -78,16 +81,6 @@
   }
 }
 
-.contacts__bottom {
-  @media screen and (min-width: 1280px) {
-    width: 100%;
-    height: 81px;
-    background: $sectionbgColor;
-    position: relative;
-    z-index: 9999;
-  }
-}
-
 .contacts__section-last {
   margin-bottom: 54px;
   @media screen and (min-width: 768px) {
@@ -143,25 +136,29 @@
   font-size: 12px;
   line-height: 1.5;
   color: $rareColor;
+  border-bottom: 1px solid #e1e1e1;
+  padding-bottom: 25px;
   @media screen and (min-width: 768px) {
     font-size: 14px;
+    padding-bottom: 30px;
   }
   @media screen and (min-width: 1280px) {
     font-size: 16px;
+    padding-bottom: 32px;
   }
 }
 
-.contacts__describe::after {
-  content: '';
-  height: 0px;
-  border: 1px solid#e1e1e1;
-  display: block;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  background-color: #e1e1e1;
+.contacts__list-schedule {
+  border-bottom: 1px solid #e1e1e1;
+  padding-top: 25px;
+  padding-bottom: 25px;
   @media screen and (min-width: 768px) {
-    margin-top: 30px;
-    margin-bottom: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  @media screen and (min-width: 1280px) {
+    padding-top: 32px;
+    padding-bottom: 32px;
   }
 }
 
@@ -207,27 +204,14 @@
   }
 }
 
-.contacts__list::before {
-  content: '';
-  width: 179px;
-  height: 0px;
-  border: 1px solid #e1e1e1;
-  display: block;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  background-color: #e1e1e1;
+.contacts__list {
+  padding-top: 25px;
   @media screen and (min-width: 768px) {
-    margin-top: 30px;
-    margin-bottom: 30px;
+    padding-top: 30px;
   }
   @media screen and (min-width: 1280px) {
-    margin-top: 32px;
-    margin-bottom: 32px;
+    padding-top: 32px;
   }
-}
-
-.contacts__list {
-  padding: 0;
 }
 
 .contacts__item {
@@ -281,7 +265,7 @@
   height: 44px;
   margin-bottom: 10px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 4px 0px;
-  transition: background .25s cubic-bezier(.4,0,.2,1);
+  transition: background 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (min-width: 768px) {
     width: 191.45 px;
@@ -316,7 +300,7 @@
   border: transparent;
   color: $accentColor;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 4px 0px;
-  transition: background .25s cubic-bezier(.4,0,.2,1);
+  transition: background 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (min-width: 768px) {
     width: 174.05px;
