--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -34,12 +34,12 @@
       <!-- вторая карточка -->
 
       <div class="contacts__section">
-        <div class="contacts__section">
-          <p class="contacts__category category-green">FOODTRUCK</p>
+        <div class="contacts__section-top">
+          <p class="contacts__category category-green">FODDTRUCK</p>
           <p class="contacts__categorycity">Los Angeles</p>
           <p class="contacts__describe">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
         </div>
-        <ul>
+        <ul class="contacts__list-schedule">
           <li class="contacts__timeday">
             Monday - Friday
             <p class="contacts__time-weekend">06:00 AM - 10:00 PM</p>
@@ -59,16 +59,15 @@
           </li>
         </ul>
       </div>
-
       <!-- третья карточка -->
 
       <div class="contacts__section">
-        <div class="contacts__section">
+        <div class="contacts__section-top">
           <p class="contacts__category">CAFE</p>
           <p class="contacts__categorycity">New York</p>
           <p class="contacts__describe">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
         </div>
-        <ul>
+        <ul class="contacts__list-schedule">
           <li class="contacts__timeday">
             Monday - Friday
             <p class="contacts__time-weekend">06:00 AM - 10:00 PM</p>
