исправляет баги по анимациям героя

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -6,8 +6,10 @@
         </svg>
         <div class="hero__content">
             <h1 class="hero__title">ice cream made with <span>passion</span></h1>
-            <a href="#block4" class="hero__btn-left">Products</a>
-            <a href="#block3" class="hero__btn-right">How it’s made?</a> 
+            <ul class="hero-content__navigation">
+                <li class="hero-content__item"><a href="#block4" class="hero__btn-left">Products</a></li>
+                <li class="hero-content__item"><a href="#block3" class="hero__btn-right">How it’s made?</a></li>
+            </ul> 
         </div>
         <picture class="hero__milk">
             <source media="(min-width: 1280px)" srcset="/images/hero-milk-desk.png 1x, /images/hero-milk-desk@2x.png 2x" />
@@ -29,13 +31,13 @@
             <img src="/images/hero-icecream-desk.png" alt="ice cream cone" width="170" height="410"/>
         </picture>
         <ul class="representation-list">
-            <li class="representation-list__title">
+            <li class="representation-list__item">
                 <a href="https://www.google.com/maps/place/GoIT/@50.4249619,30.531895,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4d96f5139689b:0xa1f7c65300bebad1!8m2!3d50.4249597!4d30.5340916" target="_blank" class="representation-list__link"><span>16</span> cafes</a>
                 <svg class="representation-list__icon">
                     <use href="images/symbol-defs.svg#icon-hero-ellipse"></use>
                 </svg>
             </li>
-            <li class="representation-list__title">
+            <li class="representation-list__item">
                 <a href="https://www.instagram.com/goitclub/" target="_blank" class="representation-list__link"><span>23</span> food trucks</a>
                 <svg class="representation-list__icon">
                     <use href="images/symbol-defs.svg#icon-hero-ellipse"></use>
