--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,39 +1,335 @@
 <section class="customer-review" id="block2">
-
-    <div class="container customer-review-container">
-        <picture> 
-            <source srcset="/images/customer-emily_1x.webp" type="image/webp">    
-            <img src="/images/customer-emily_1x.jpg" alt="girl-with-curly-hair" class="customer-img">
-          
-        </picture>
-        <div class="review-article-container">
-            <article class="review-article review-article--before"> 
-                <svg class="customer-quotes">
-                    <use href="/images/symbol-defs.svg#icon-ustomer-quotes"/> 
-                </svg>
-                Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
-            </article>
+    <div class="slider">
+        <div class="container customer-review-container">
+            <picture>          
+                <source srcset="/images/vitaliy_1x.png 1x, /images/vitaliy_2x.png 2x ">
+                <img src="/images/vitaliy_1x.png" alt="vitaliy"  class="customer-img"/>
+            </picture>
+            <div class="review-article-container">
+                <article class="review-article review-article--before"> 
+                    <svg class="customer-quotes">
+                        <use href="/images/symbol-defs.svg#icon-ustomer-quotes"/> 
+                    </svg>
+                    In our team, I was given the role of the Team Leader. All members of our team have great prospects ... I have the best team. Thank you guys!
+                </article>
+            </div>
+                <div class="slider-container">
+                    <ul class="dots">
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                    </ul>
+                    <p class="customer-name">Vitaliy, Kyiv</p>
+                </div>
+            
         </div>
-        <div class="slider-container">
-            <ul class="dots">
-                <li class="dots__item">
-                    <svg class="dots__icon">
-                        <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+        <div class="container customer-review-container">
+            <picture>          
+                <source srcset="/images/sonya_1x.png 1x, /images/sonya_2x.png 2x ">
+                <img src="/images/sonya_1x.png" alt="sonya" class="customer-img">
+            </picture>
+            <div class="review-article-container">
+                <article class="review-article review-article--before"> 
+                    <svg class="customer-quotes">
+                        <use href="/images/symbol-defs.svg#icon-ustomer-quotes"/> 
                     </svg>
-                </li>
-                <li class="dots__item">
-                    <svg class="dots__icon">
-                        <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                    I'm Scrum master. My section was Products. Team project is very interesting, i like it. I think, my teammates are the best. Next project I want make with  them.
+                </article>
+            </div>
+                <div class="slider-container">
+                    <ul class="dots">
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                    </ul>
+                    <p class="customer-name">Sofia, Kyiv</p>
+                </div>
+            
+        </div>
+        <div class="container customer-review-container">
+            <picture>          
+                <source srcset="/images/mark_1x.png 1x, /images/mark_2x.png 2x ">
+                <img src="/images/mark_1x.png" alt="mark" class="customer-img">  
+            </picture>
+            <div class="review-article-container">
+                <article class="review-article review-article--before"> 
+                    <svg class="customer-quotes">
+                        <use href="/images/symbol-defs.svg#icon-ustomer-quotes"/> 
                     </svg>
-                </li>
-                <li class="dots__item">
-                    <svg class="dots__icon">
-                        <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                   I've chosen a section with slider. Firstly, it was difficult, but I'm happy I've coped with it. By the way, it is the first team project I liked. Thanks to my guys, to desiners of the layout and to the mentors. I already wanna go to the next team project!
+                </article>
+            </div>
+                <div class="slider-container">
+                    <ul class="dots">
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                    </ul>
+                    <p class="customer-name">Mark, Kyiv</p>
+                </div>
+            
+        </div>
+        <div class="container customer-review-container">
+            <picture>          
+                <source srcset="/images/dima_1x.png 1x, /images/dima_2x.png 2x ">
+                <img src="/images/dima_1x.png" alt="dima" class="customer-img">
+            </picture>
+            <div class="review-article-container">
+                <article class="review-article review-article--before"> 
+                    <svg class="customer-quotes">
+                        <use href="/images/symbol-defs.svg#icon-ustomer-quotes"/> 
                     </svg>
-                </li>
-            </ul>
-            <p class="customer-name">Emily, Los Angeles</p>
-            <ul class="slider-dots">
+                    Hello to everyone!
+
+                        In a word about this project. It was an amazing team experience, an interesting test and a personal challenge. In the end, the layout of the site, js, jquery and a lot of Googling - we have a lot to show. As for me, the most interesting part of my job was “header-current.js”. This was my first encounter with “jquery”  and it's took a long time to solve.
+
+                        Just do what you love!
+
+                </article>
+            </div>
+                <div class="slider-container">
+                    <ul class="dots">
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                    </ul>
+                    <p class="customer-name">Dmitriy, Kyiv</p>
+                </div>
+            
+        </div>
+        <div class="container customer-review-container">
+            <picture>          
+                <source srcset="/images/edward_1x.png 1x, /images/edward_2x.png 2x ">
+                <img src="/images/edward_1x.png" alt="edward" class="customer-img">
+            </picture>
+            <div class="review-article-container">
+                <article class="review-article review-article--before"> 
+                    <svg class="customer-quotes">
+                        <use href="/images/symbol-defs.svg#icon-ustomer-quotes"/> 
+                    </svg>
+                    I worked on the section about, I really enjoyed working in a team, I discovered a lot of interesting and new things. Thanks everyone.
+                </article>
+            </div>
+                <div class="slider-container">
+                    <ul class="dots">
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                    </ul>
+                    <p class="customer-name">Edward, Los Angeles</p>
+                </div>
+            
+        </div>
+        <div class="container customer-review-container">
+            <picture>          
+                <source srcset="/images/inna_1x.png 1x, /images/inna_2x.png 2x ">
+                <img src="/images/inna_1x.png" alt="inna" class="customer-img">
+            </picture>
+            <div class="review-article-container">
+                <article class="review-article review-article--before"> 
+                    <svg class="customer-quotes">
+                        <use href="/images/symbol-defs.svg#icon-ustomer-quotes"/> 
+                    </svg>
+                    I wrote the code for the Advantages and Gallery sections. It was a great team work experience.  And I can honestly say that: “The strength of the team is each individual member. The strength of each member is the team.” Thanks everyone, you are the best team!
+                </article>
+            </div>
+                <div class="slider-container">
+                    <ul class="dots">
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                    </ul>
+                    <p class="customer-name">Inna, Cherkassy</p>
+                </div>
+            
+        </div>
+        <div class="container customer-review-container">
+            <picture>          
+                <source srcset="/images/serhii_1x.png 1x, /images/serhii_2x.png 2x ">
+                <img src="/images/serhii_1x.png" alt="serhii" class="customer-img">
+            </picture>
+            <div class="review-article-container">
+                <article class="review-article review-article--before"> 
+                    <svg class="customer-quotes">
+                        <use href="/images/symbol-defs.svg#icon-ustomer-quotes"/> 
+                    </svg>
+                    I worked with the Hero section. I liked the project and my best team, I had the opportunity to be creative. And now I constantly think about what I position)
+                </article>
+            </div>
+                <div class="slider-container">
+                    <ul class="dots">
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                    </ul>
+                    <p class="customer-name">Sergey, Borispol</p>
+                </div>
+            
+        </div>
+        <div class="container customer-review-container">
+            <picture>          
+                <source srcset="/images/alexey_1x.png 1x, /images/alexey_2x.png 2x ">
+                <img src="/images/alexey_1x.png" alt="alexey" class="customer-img">
+            </picture>
+            <div class="review-article-container">
+                <article class="review-article review-article--before"> 
+                    <svg class="customer-quotes">
+                        <use href="/images/symbol-defs.svg#icon-ustomer-quotes"/> 
+                    </svg>
+                    I worked on the Contact section. I liked working in a team and this is a good practice for future work.
+                </article>
+            </div>
+                <div class="slider-container">
+                    <ul class="dots">
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                    </ul>
+                    <p class="customer-name">Alexey, Los Angeles</p>
+                </div>
+            
+        </div>
+        <div class="container customer-review-container">
+            <picture>          
+                <source srcset="/images/heorhy_1x.png 1x, /images/heorhy_2x.png 2x ">
+                <img src="/images/heorhy_1x.png" alt="heorhy" class="customer-img">
+            </picture>
+            <div class="review-article-container">
+                <article class="review-article review-article--before"> 
+                    <svg class="customer-quotes">
+                        <use href="/images/symbol-defs.svg#icon-ustomer-quotes"/> 
+                    </svg>
+                    Hello everybody!
+                    An interesting project, great team and an unforgettable experience!
+                    Footer is made according to the terms of reference and team wishes.
+                    Learn new things and never stop!
+                </article>
+            </div>
+                <div class="slider-container">
+                    <ul class="dots">
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                        <li class="dots__item">
+                            <svg class="dots__icon">
+                                <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                            </svg>
+                        </li>
+                    </ul>
+                    <p class="customer-name">Heorhy, Borispol</p>
+                </div>
+            
+        </div>
+        
+        
+       
+        
+    </div>
+
+<!-- <ul class="slider-dots">
                 <li class="slider-dots__item">
                     <svg class="slider-dots__icon">
                         <use href="/images/symbol-defs.svg#icon-home"/>
@@ -49,9 +345,5 @@
                         <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
                     </svg>
                 </li>
-            </ul>
-        </div>
-    </div>
-
-
+            </ul> -->
 </section>
