--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -14,15 +14,14 @@
 
 .review-article-container{
     background-color: #FAFAFA;
-    padding: 43px 50px 20px 50px;
+    padding: 23px 50px 20px 50px;
     margin-bottom: 14px;
     @media screen and(min-width: 768px) {
-        padding: 30px 36px 28px 60px;
+        padding: 10px 36px 28px 60px;
         margin-bottom: 8px;
-       
     }
     @media screen and(min-width: 1280px){
-        padding: 47px 54px 32px 59px;
+        padding: 30px 54px 32px 59px;
         margin-bottom: -1px;
     }
 }
@@ -56,15 +55,15 @@
     
     z-index: -1;
     top: -22px;
-    left: 4px;
+    left: -20px;
     fill: #E1E1E1;
     @media screen and(min-width: 768px){
-        top: -25px;
-        left: -26px;
+        top: -22px;
+        left: -16px;
     }
     @media screen and(min-width: 1280px){
         top: -22px;
-        left: -16px;
+        left: -5px;
     }
 }
 
@@ -124,29 +123,86 @@
     }
 }
 
-.slider-dots{
-    text-align: center;
-}
 
-.slider-dots__item{
-    width: 12px;
-    height: 12px;
-    & + &{
-        margin-left: 18px;
+.slick-dots li{
+    width: 15px;
+    height: 15px;
+    margin-left: 0;
+    margin-right: 10px;
+
+    &:nth-last-child(1){
+        margin-right: 0;
     }
-    &:first-child .slider-dots__icon {
-        fill: #d31342;
+            
+    & button{
+        width: 12px;
+        height: 12px;
+        
+        &::before{
+            width: 12px;
+            height: 12px;
+            color: #D9D9D9;
+            opacity: 1;   
+        }       
     }
-    display: inline-block;
+    &.slick-active button::before{
+        opacity: 1;
+        color: #D31342;
+        
+    }
+}
+
+.slick-dots li + .slick-dots li{
+    margin-left: 10px;
+}
+
+.slick-prev, .slick-next {
+    width: 25px;
+    height: 25px;
+    
+    z-index: 50;
+
+    @media screen and(min-width: 768px){
+        width: 30px;
+        height: 30px;
+    }
+    @media screen and(min-width: 1280px){
+        width: 40px;
+        height: 40px;
+    }
+    
+    &::before{
+        color:#c7133e;
+        font-size: 25px;
+        border-radius: 50px;
+    
+        @media screen and(min-width: 768px){
+            font-size: 30px;
+        }
+        @media screen and(min-width: 1280px){
+            font-size: 40px;
+        }
+    }
+    
     
 }
 
-.slider-dots__icon{
-    width: 100%;
-    height: 100%; 
-
-    
-    fill: #D9D9D9;
-    
+.slick-prev{
+    left: 10px;
+    @media screen and(min-width: 768px){
+        left: 30px;
+    }
+    @media screen and(min-width: 1280px){
+        left: 70px;
+    }
 }
 
+.slick-next{
+    right: 10px;
+    @media screen and(min-width: 768px){
+        right: 30px;
+    }
+    @media screen and(min-width: 1280px){
+        right: 70px;
+    }
+}
