--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -260,7 +260,7 @@
                     <svg class="customer-quotes">
                         <use href="/images/symbol-defs.svg#icon-ustomer-quotes"/> 
                     </svg>
-                    I worked on the Contact section. I liked working in a team and this is a good practice for future work.
+                    I worked on the Contact section. I liked working in a team and this is a good practice for future work. Thanks to everyone!
                 </article>
             </div>
                 <div class="slider-container">
@@ -295,10 +295,7 @@
                     <svg class="customer-quotes">
                         <use href="/images/symbol-defs.svg#icon-ustomer-quotes"/> 
                     </svg>
-                    Hello everybody!
-                    An interesting project, great team and an unforgettable experience!
-                    Footer is made according to the terms of reference and team wishes.
-                    Learn new things and never stop!
+                    Actually exciting and breathtaking adventures thrilling soul with eagerly awaiting results and new starts in much the same vein.
                 </article>
             </div>
                 <div class="slider-container">
