--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,7 +8,7 @@
         <p class="footer__slogan-text footer__slogan-text--second">with passion</p>
       </li>
     </ul>
-    <aside class="footer__aside">
+    <div class="footer__box">
       <ul class="footer__soc-list footer__soc-list--top">
         <li class="footer__soc-item"><a class="footer__soc-link" href="https://github.com" target="blank"><svg
               width="32" height="32">
@@ -26,7 +26,7 @@
       <address class="footer__address">Feel free to contact
         <a class="footer__tel" href="tel:+61(0)383766284">+61(0)383 766 284</a>
       </address>
-    </aside>
+    </div>
 
   </div>
   <p class="footer__copyright">© 2019 - IceCream.
