--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,19 +1,28 @@
 .footer {
   background-color: #fff5f6;
+  padding-bottom: 25px;
+  @media screen and (min-width: 768px) {
+    padding-bottom: 18px;
+  }
+  @media screen and (min-width: 1280px) {
+    padding-bottom: 10px;
+  }
 }
 
 .footer__block {
   max-width: 480px;
   width: 100%;
   border-bottom: 1px solid #e1e1e1;
-
+  margin-bottom: 22px;
   @media screen and (min-width: 768px) {
     display: flex;
     max-width: 768px;
+    margin-bottom: 29px;
   }
 
   @media screen and (min-width: 1280px) {
     max-width: 1280px;
+    margin-bottom: 9px;
   }
 }
 
@@ -79,7 +88,7 @@
   }
 }
 
-.footer__aside {
+.footer__box {
   margin-bottom: 43px;
 
   @media screen and (min-width: 768px) {
@@ -146,7 +155,7 @@
 }
 
 .footer__copyright {
-  padding: 22px 86px 25px;
+  padding: 0 86px;
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
@@ -155,12 +164,8 @@
   color: #907e82;
 
   @media screen and (min-width: 768px) {
-    padding: 29px 0 18px;
+    padding: 0;
     line-height: 1.86;
     letter-spacing: 0.02em;
-  }
-
-  @media screen and (min-width: 1280px) {
-    padding: 9px 0 10px;
   }
 }
