исправляет css правила

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -117,9 +117,8 @@
                     </svg>
                     Hello to everyone!
 
-                        In a word about this project. It was an amazing team experience, an interesting test and a personal challenge. In the end, the layout of the site, js, jquery and a lot of Googling - we have a lot to show. As for me, the most interesting part of my job was “header-current.js”. This was my first encounter with “jquery”  and it's took a long time to solve.
+In a word about this project. It was an amazing team experience, an interesting test and a personal challenge. In the end, the layout of the site, js, jquery and a lot of Googling - we have a lot to show.
 
-                        Just do what you love!
 
                 </article>
             </div>
