--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -13,47 +13,29 @@
   max-width: 480px;
   width: 100%;
   border-bottom: 1px solid #e1e1e1;
+  padding-bottom: 43px;
   margin-bottom: 22px;
   @media screen and (min-width: 768px) {
     display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 280px;
     max-width: 768px;
+    padding-bottom: 91px;
     margin-bottom: 29px;
   }
 
   @media screen and (min-width: 1280px) {
     max-width: 1280px;
+    height: 215px;
+    padding-bottom: 97px;
     margin-bottom: 9px;
   }
 }
 
-.footer__slogan-list {
-  margin-bottom: 43px;
-  width: 232px;
-
-  @media screen and (min-width: 768px) {
-    width: 340px;
-    margin-bottom: 91px;
-  }
-
-  @media screen and (min-width: 1280px) {
-    width: 477px;
-    margin-bottom: 97px;
-  }
-}
-
-.footer__slogan-item {
-  margin-bottom: 17px;
-
-  @media screen and (min-width: 768px) {
-    margin-bottom: 16px;
-  }
-
-  @media screen and (min-width: 1280px) {
-    margin-bottom: 15px;
-  }
-}
-
 .footer__slogan-text {
+  margin-bottom: 17px;
+  width: 232px;
   font-family: Titan One;
   font-style: normal;
   font-weight: 400;
@@ -63,37 +45,34 @@
   color: #ffa5ba;
 
   @media screen and (min-width: 768px) {
+    margin-bottom: 16px;
+    width: 340px;
     font-size: 26px;
     letter-spacing: 0.04em;
   }
 
   @media screen and (min-width: 1280px) {
+    margin-bottom: 15px;
+    width: 477px;
     font-size: 30px;
     letter-spacing: 0.04em;
   }
 }
 
 .footer__slogan-text--second {
+  margin-bottom: 43px;
   font-size: 34px;
   letter-spacing: 0.04em;
   color: $accentColor;
 
   @media screen and (min-width: 768px) {
+    margin-bottom: 0;
     font-size: 48px;
     letter-spacing: 0.06em;
   }
 
   @media screen and (min-width: 1280px) {
     font-size: 58px;
-  }
-}
-
-.footer__box {
-  margin-bottom: 43px;
-
-  @media screen and (min-width: 768px) {
-    margin-left: auto;
-    margin-bottom: 0;
   }
 }
 
