--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -9,7 +9,6 @@
 
 .header-box {
     border-radius: 24px;
-    background-color: rgba(255, 165, 186, 0.4);
     @media screen and (min-width: 480px) {
         position: absolute;
         left: 50%;
@@ -27,6 +26,10 @@
 
     @media screen and (min-width: 1280px) {
         justify-content: space-between;
+    }
+    
+    &.scrolled {
+        background-color: $pinkbgСolor;
     }
 }
 
