class name shortened
class name shortened for .footer__slogan

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,9 +1,9 @@
 <footer class="footer">
   <div class="footer__block container">
 
-    <p class="footer__slogan-text">homemade ice cream made</p>
+    <p class="footer__slogan">homemade ice cream made</p>
 
-    <p class="footer__slogan-text footer__slogan-text--second">with passion</p>
+    <p class="footer__slogan footer__slogan--second">with passion</p>
 
     <ul class="footer__soc-list footer__soc-list--top">
       <li class="footer__soc-item"><a class="footer__soc-link" href="https://github.com" target="blank"><svg width="32"
