--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -33,7 +33,7 @@
   }
 }
 
-.footer__slogan-text {
+.footer__slogan {
   margin-bottom: 17px;
   width: 232px;
   font-family: Titan One;
@@ -59,7 +59,7 @@
   }
 }
 
-.footer__slogan-text--second {
+.footer__slogan--second {
   margin-bottom: 43px;
   font-size: 34px;
   letter-spacing: 0.04em;
