--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
 
     <p class="footer__slogan">homemade ice cream made</p>
 
-    <p class="footer__slogan footer__slogan--second">with passion</p>
+    <p class="footer__slogan footer__slogan--last">with passion</p>
 
     <ul class="footer__soc-list footer__soc-list--top">
       <li class="footer__soc-item"><a class="footer__soc-link" href="https://github.com" target="blank"><svg width="32"
