--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -10,26 +10,16 @@
 }
 
 .footer__block {
-  max-width: 480px;
-  width: 100%;
-  border-bottom: 1px solid #e1e1e1;
-  padding-bottom: 43px;
-  margin-bottom: 22px;
+  margin-bottom: 43px;
   @media screen and (min-width: 768px) {
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    height: 280px;
-    max-width: 768px;
-    padding-bottom: 91px;
-    margin-bottom: 29px;
+    flex-flow: column wrap;
+    height: 186px;
+    margin-bottom: 91px;
   }
-
   @media screen and (min-width: 1280px) {
-    max-width: 1280px;
-    height: 215px;
-    padding-bottom: 97px;
-    margin-bottom: 9px;
+    height: 116px;
+    margin-bottom: 97px;
   }
 }
 
@@ -40,7 +30,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 1.15;
+  line-height: 1.145;
   text-transform: uppercase;
   color: #ffa5ba;
 
@@ -59,7 +49,7 @@
   }
 }
 
-.footer__slogan--second {
+.footer__slogan--last {
   margin-bottom: 43px;
   font-size: 34px;
   letter-spacing: 0.04em;
@@ -134,7 +124,8 @@
 }
 
 .footer__copyright {
-  padding: 0 86px;
+  border-top: 1px solid #e1e1e1;
+  padding: 22px 86px 0;
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
@@ -143,8 +134,11 @@
   color: #907e82;
 
   @media screen and (min-width: 768px) {
-    padding: 0;
+    padding: 29px 0 0;
     line-height: 1.86;
     letter-spacing: 0.02em;
+  }
+  @media screen and (min-width: 1280px) {
+    padding-top: 9px;
   }
 }
