--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -13,12 +13,11 @@
   margin-bottom: 43px;
   @media screen and (min-width: 768px) {
     display: flex;
-    flex-flow: column wrap;
-    height: 186px;
+    justify-content: space-between;
+    flex-wrap: wrap;
     margin-bottom: 91px;
   }
   @media screen and (min-width: 1280px) {
-    height: 116px;
     margin-bottom: 97px;
   }
 }
@@ -56,6 +55,7 @@
   color: $accentColor;
 
   @media screen and (min-width: 768px) {
+    order: 1;
     margin-bottom: 0;
     font-size: 48px;
     letter-spacing: 0.06em;
@@ -74,8 +74,8 @@
 
 .footer__soc-list--top {
   margin-bottom: 46px;
-  @media screen and (min-width: 1280px) {
-    margin-bottom: 50px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
   }
 }
 
@@ -111,10 +111,13 @@
   color: #000000;
 
   @media screen and (min-width: 768px) {
+    order: 1;
+    margin-top: 6px;
     font-size: 14px;
   }
-
+  // margin-top compensates shortage of margin-bottom at class .footer__soc-link
   @media screen and (min-width: 1280px) {
+    margin-top: 33px;
     letter-spacing: 0.02em;
   }
 }
@@ -134,7 +137,7 @@
   color: #907e82;
 
   @media screen and (min-width: 768px) {
-    padding: 29px 0 0;
+    padding-top: 29px;
     line-height: 1.86;
     letter-spacing: 0.02em;
   }
